Add comprehensive Java execution instructions to GEMINI.md
- Add detailed section 'How to Work with Java in DMTools (CRITICAL INSTRUCTIONS)'
- Specify mandatory Gradle commands for compilation and testing
- Document step-by-step process for making code changes
- List common mistakes to avoid (java/javac direct usage, Maven commands)
- Include correct multi-module project structure understanding
- Add Spring Security and OAuth2 testing patterns
- Update java-coding-style.mdc: Java 21 → Java 23 for consistency
- Provide troubleshooting commands for compilation and test failures

This should prevent Gemini from using wrong Java commands and help understand the complex multi-module setup properly.